# recruiting-screening-assistant

./: .env.example  .gitignore  Makefile  README.md  SOLUTION_OVERVIEW.md  SPEC.md  SYSTEM_DESIGN.md  docker-compose.yml
backend/: Dockerfile  Dockerfile.cloudrun  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_job_status.py
backend/app/: config.py  main.py  seed.py
backend/app/api/routes/: __init__.py  admin.py  candidates.py  dashboard.py  decisions.py  documents.py  jobs.py
backend/app/core/: database.py  exceptions.py  storage.py
backend/app/models/: __init__.py  audit_event.py  candidate.py  decision.py  document.py  embedding.py  explanation.py  extraction.py  job.py  jobs_queue.py  score.py  score_config.py
backend/app/repositories/: __init__.py  audit_repository.py  base.py  candidate_repository.py  decision_repository.py  document_repository.py  explanation_repository.py  extraction_repository.py  job_repository.py  queue_repository.py  score_config_repository.py  score_repository.py
backend/app/schemas/: __init__.py  candidate.py  dashboard.py  decision.py  document.py  job.py  score_config.py
backend/app/services/: __init__.py  audit_service.py  candidate_service.py  decision_service.py  document_service.py  job_service.py  queue_service.py
backend/tests/: conftest.py  test_api_jobs.py
frontend/: Dockerfile  Dockerfile.cloudrun  package.json  tailwind.config.ts
worker/: Dockerfile  Dockerfile.cloudrun  pyproject.toml
worker/tests/: test_scorers.py
worker/worker/: config.py  database.py  main.py  models.py  storage.py
worker/worker/clients/: __init__.py  embedding_client.py  openai_client.py
worker/worker/extractors/: __init__.py  pdf_extractor.py  word_extractor.py
worker/worker/prompts/: __init__.py  explanation_prompt.py  extraction_prompt.py
worker/worker/schemas/: __init__.py  explanation_schema.py  extraction_schema.py
worker/worker/scorers/: __init__.py  must_scorer.py  nice_scorer.py  role_scorer.py  total_fit_calculator.py  year_scorer.py
worker/worker/tasks/: __init__.py  embedding_generation.py  explanation_generation.py  llm_extraction.py  score_calculation.py  text_extraction.py
(+15 files in other folders)
